--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "rimraf": "~2.2.5",
     "json-literal": "~1.1.0",
-    "shelljs": "~0.2.6",
-    "concat-stream": "~1.4.1"
+    "shelljs": "~0.2.6"
   },
   "devDependencies": {},
   "scripts": {
